hw02_docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-health-checker
spec:
  type: LoadBalancer
  selector:
    app: k8s-health-checker
  ports:
  - port: 8080
    targetPort: 8000
