hw02_docker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-health-checker-ingr
  labels:
    name: k8s-health-checker-ingr
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: k8s-health-checker-svc
                port: 
                  number: 80
